# Pie-Brain

./: .env.example  .gitignore  CLAUDE.md  FEATURE_IDEAS.md  PROJECT_SPEC.md  README.md  pyproject.toml  setup.sh
brains/: base.py  claude_code.py  registry.py
config/: settings.py
core/: db.py  dev_watcher.py  engine.py  router.py  utils.py  watchdog.py
guardian/: __init__.py  interface_check.py  sanitizer.py  smoke_test.py  validator.py  watcher.py
providers/: __init__.py  scheduler.py  telegram.py
tests/: test_arxiv.py  test_brain.py  test_db.py  test_engine.py  test_git_sync.py  test_guardian_interface.py  test_guardian_sanitizer.py  test_guardian_validator.py  test_guardian_watcher.py  test_memory.py  test_query.py  test_router.py  test_runner.py  test_scheduler.py  test_telegram.py  test_tools.py
tools/: __init__.py  arxiv.py  arxiv_runner.py  base.py  git_sync.py  git_sync_runner.py  memory.py  memory_runner.py  query.py  runner.py  schedule.py
