[project]
name = "pie-brain"
version = "0.1.0"
description = "Modular async task-routing engine for Raspberry Pi 4"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.20.0",
    "ollama>=0.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
arxiv = ["arxiv>=2.1.0"]
memory = ["lancedb>=0.6.0", "sentence-transformers>=2.7.0"]
telegram = ["python-telegram-bot>=21.0"]
full = [
    "arxiv>=2.1.0",
    "lancedb>=0.6.0",
    "sentence-transformers>=2.7.0",
    "python-telegram-bot>=21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "tools", "brains", "providers", "config", "guardian"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
]
